--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,14 +1,10 @@
-.container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
-
 .page-footer {
     text-align: right;
     font-size: 1rem;
-    color: #FFF;
-
-    margin-top: 6rem;
-}
+    color: #fff;
+    margin-top: 40px;
+  }
+  
+  .page-footer span {
+    color: #ff1e42;
+  }
