--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,15 +5,51 @@
     padding: 0;
     outline: 0;
     box-sizing: border-box;
+    font-weight: normal;
 }
 
-html, body {
-    height: 100%;
-    width: 100%;
- }
-
 body {
-    font: 1rem 'Roboto', sans-serif;
-    color: #FFF;
+    font: 1rem/1.3 "Roboto", sans-serif;
     background: #0a1f44;
+    color: #1e2432;
+    padding: 50px;
+}
+
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+input {
+    -webkit-appearance: none;
+}
+
+button,
+input {
+    border: none;
+    background: none;
+    outline: none;
+    color: inherit;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+ul {
+    list-style: none;
+}
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
