--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,61 +1,53 @@
-button, input {
-    border: none;
-    border-bottom-color: currentcolor;
-    border-bottom-style: none;
-    border-bottom-width: medium;
-    background: none;
-    outline: none;
-    color: inherit;
-}
-
 .top-banner {
-    padding: 1rem;
-    margin-top: .8rem;
-
-    font-size: 2rem;    
+  color: #fff;
 }
 
-.top-banner h1 {
-    font-weight: 500;
+.heading {
+  font-weight: bold;
+  font-size: 4rem;
+  letter-spacing: 0.02em;
+  padding: 0 0 30px 0;
 }
 
 .top-banner form {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-
-    margin-top: 1.8rem;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .top-banner form input {
-    font-size: 2rem;
-    font-weight: 400;
-    color: #53627c;
+  font-size: 2rem;
+  height: 40px;
+  padding: 5px 5px 10px;
+  border-bottom: 1px solid;
+}
 
-    height: 40px;
-    padding: 5px 5px 10px;
-
-    border-bottom: 1px solid;
-
-    background: none;
+.top-banner form input::placeholder {
+  color: currentColor; 
 }
 
 .top-banner form button {
-    min-width: 95%;
-    height: 2.75rem;
-    margin-top: 1rem;
-    border-radius: 5px;
-
-    background: #ff1e42;
-    
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: #FFF;
-
-    cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  padding: 15px 20px;
+  margin-left: 15px;
+  border-radius: 5px;
+  background: #ff1e42;
+  transition: background 0.3s ease-in-out;
 }
 
 .top-banner form button:hover {
-    background: #8B0000;;
+  background: #c3112d;
 }
+
+.top-banner form .msg {
+  position: absolute;
+  bottom: -45px;
+  left: 0;
+  max-width: 800px;
+  min-height: 10px;
+
+  font-size: 1rem;
+}
+
